--- a/api/.env
+++ b/api/.env
@@ -1,4 +1,5 @@
-MONGO_URL = mongodb+srv://adityakumarpilot:zardim4VTFpfOmXU@nodeexpressprojects.yc6oqni.mongodb.net/PCWeb?retryWrites=true&w=majority
-MEMBER_ID = membersecretkeyhere
+MONGO_URL = mongodb://127.0.0.1:27017/programming_community
+MEMBER_ID = 501
 JWT_SECRET = q3s6v9y$B&E)H@McQfTjWnZr4u7w!z%C
 JWT_LIFETIME = 30d
+FRONTEND_URL = http://localhost:5173
